getExpExperiment, getExpProtocol